# gogoanime-scrapper

./: Cargo.toml  Dockerfile  docker-compose-v3.yml
src/: error.rs  handler.rs  main.rs  scrapper.rs
