[package]
name = "gogoanime-scrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28.1"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
