[package]
name = "gogoanimescrapper"
version = "0.1.59"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28.1"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
actix-web = "4"